@@ -40,78 +40,112 @@ do
 	test $ret = 0 && break
 	sleep 1
 done
+if [ $ret != 0 ] ; then echo "I:failed"; status=`expr $status + $ret`; fi
+
 echo "I:fetching master copy of zone before update"
+ret=0
 $DIG +tcp +noadd +nosea +nostat +noquest +nocomm +nocmd example.\
-	@10.53.0.1 axfr -p 5300 > dig.out.ns1 || status=1
+	@10.53.0.1 axfr -p 5300 > dig.out.ns1 || ret=1
+if [ $ret != 0 ] ; then echo "I:failed"; status=`expr $status + $ret`; fi
 
 echo "I:fetching slave 1 copy of zone before update"
 $DIG +tcp +noadd +nosea +nostat +noquest +nocomm +nocmd example.\
-	@10.53.0.2 axfr -p 5300 > dig.out.ns2 || status=1
+	@10.53.0.2 axfr -p 5300 > dig.out.ns2 || ret=1
+if [ $ret != 0 ] ; then echo "I:failed"; status=`expr $status + $ret`; fi
 
 echo "I:fetching slave 2 copy of zone before update"
+ret=0
 $DIG +tcp +noadd +nosea +nostat +noquest +nocomm +nocmd example.\
-	@10.53.0.3 axfr -p 5300 > dig.out.ns3 || status=1
+	@10.53.0.3 axfr -p 5300 > dig.out.ns3 || ret=1
+if [ $ret != 0 ] ; then echo "I:failed"; status=`expr $status + $ret`; fi
 
 echo "I:comparing pre-update copies to known good data"
-$PERL ../digcomp.pl knowngood.before dig.out.ns1 || status=1
-$PERL ../digcomp.pl knowngood.before dig.out.ns2 || status=1
-$PERL ../digcomp.pl knowngood.before dig.out.ns3 || status=1
+ret=0
+$PERL ../digcomp.pl knowngood.before dig.out.ns1 || ret=1
+$PERL ../digcomp.pl knowngood.before dig.out.ns2 || ret=1
+$PERL ../digcomp.pl knowngood.before dig.out.ns3 || ret=1
+if [ $ret != 0 ] ; then echo "I:failed"; status=`expr $status + $ret`; fi
 
 echo "I:updating zone (signed)"
-$NSUPDATE -y update.example:c3Ryb25nIGVub3VnaCBmb3IgYSBtYW4gYnV0IG1hZGUgZm9yIGEgd29tYW4K -- - <<EOF || status=1
+ret=0
+$NSUPDATE -y update.example:c3Ryb25nIGVub3VnaCBmb3IgYSBtYW4gYnV0IG1hZGUgZm9yIGEgd29tYW4K -- - <<EOF || ret=1
 server 10.53.0.3 5300
 update add updated.example. 600 A 10.10.10.1
 update add updated.example. 600 TXT Foo
 send
 EOF
+if [ $ret != 0 ] ; then echo "I:failed"; status=`expr $status + $ret`; fi
 
 echo "I:sleeping 15 seconds for server to incorporate changes"
 sleep 15
 
 echo "I:fetching master copy of zone after update"
+ret=0
 $DIG +tcp +noadd +nosea +nostat +noquest +nocomm +nocmd example.\
-	@10.53.0.1 axfr -p 5300 > dig.out.ns1 || status=1
+	@10.53.0.1 axfr -p 5300 > dig.out.ns1 || ret=1
+if [ $ret != 0 ] ; then echo "I:failed"; status=`expr $status + $ret`; fi
 
 echo "I:fetching slave 1 copy of zone after update"
+ret=0
 $DIG +tcp +noadd +nosea +nostat +noquest +nocomm +nocmd example.\
-	@10.53.0.2 axfr -p 5300 > dig.out.ns2 || status=1
+	@10.53.0.2 axfr -p 5300 > dig.out.ns2 || ret=1
+if [ $ret != 0 ] ; then echo "I:failed"; status=`expr $status + $ret`; fi
 
 echo "I:fetching slave 2 copy of zone after update"
+ret=0
 $DIG +tcp +noadd +nosea +nostat +noquest +nocomm +nocmd example.\
-	@10.53.0.3 axfr -p 5300 > dig.out.ns3 || status=1
+	@10.53.0.3 axfr -p 5300 > dig.out.ns3 || ret=1
+if [ $ret != 0 ] ; then echo "I:failed"; status=`expr $status + $ret`; fi
 
 echo "I:comparing post-update copies to known good data"
-$PERL ../digcomp.pl knowngood.after1 dig.out.ns1 || status=1
-$PERL ../digcomp.pl knowngood.after1 dig.out.ns2 || status=1
-$PERL ../digcomp.pl knowngood.after1 dig.out.ns3 || status=1
+ret=0
+$PERL ../digcomp.pl knowngood.after1 dig.out.ns1 || ret=1
+$PERL ../digcomp.pl knowngood.after1 dig.out.ns2 || ret=1
+$PERL ../digcomp.pl knowngood.after1 dig.out.ns3 || ret=1
+if [ $ret != 0 ] ; then echo "I:failed"; status=`expr $status + $ret`; fi
+
+echo "I:checking 'forwarding update for zone' is logged"
+ret=0
+grep "forwarding update for zone 'example/IN'" ns3/named.run > /dev/null || ret=1
+if [ $ret != 0 ] ; then echo "I:failed"; status=`expr $status + $ret`; fi
 
 echo "I:updating zone (unsigned)"
-$NSUPDATE -- - <<EOF || status=1
+ret=0
+$NSUPDATE -- - <<EOF || ret=1
 server 10.53.0.3 5300
 update add unsigned.example. 600 A 10.10.10.1
 update add unsigned.example. 600 TXT Foo
 send
 EOF
+if [ $ret != 0 ] ; then echo "I:failed"; status=`expr $status + $ret`; fi
 
 echo "I:sleeping 15 seconds for server to incorporate changes"
 sleep 15
 
 echo "I:fetching master copy of zone after update"
+ret=0
 $DIG +tcp +noadd +nosea +nostat +noquest +nocomm +nocmd example.\
-	@10.53.0.1 axfr -p 5300 > dig.out.ns1 || status=1
+	@10.53.0.1 axfr -p 5300 > dig.out.ns1 || ret=1
+if [ $ret != 0 ] ; then echo "I:failed"; status=`expr $status + $ret`; fi
 
 echo "I:fetching slave 1 copy of zone after update"
+ret=0
 $DIG +tcp +noadd +nosea +nostat +noquest +nocomm +nocmd example.\
-	@10.53.0.2 axfr -p 5300 > dig.out.ns2 || status=1
+	@10.53.0.2 axfr -p 5300 > dig.out.ns2 || ret=1
+if [ $ret != 0 ] ; then echo "I:failed"; status=`expr $status + $ret`; fi
 
 echo "I:fetching slave 2 copy of zone after update"
+ret=0
 $DIG +tcp +noadd +nosea +nostat +noquest +nocomm +nocmd example.\
-	@10.53.0.3 axfr -p 5300 > dig.out.ns3 || status=1
+	@10.53.0.3 axfr -p 5300 > dig.out.ns3 || ret=1
+if [ $ret != 0 ] ; then echo "I:failed"; status=`expr $status + $ret`; fi
 
 echo "I:comparing post-update copies to known good data"
-$PERL ../digcomp.pl knowngood.after2 dig.out.ns1 || status=1
-$PERL ../digcomp.pl knowngood.after2 dig.out.ns2 || status=1
-$PERL ../digcomp.pl knowngood.after2 dig.out.ns3 || status=1
+ret=0
+$PERL ../digcomp.pl knowngood.after2 dig.out.ns1 || ret=1
+$PERL ../digcomp.pl knowngood.after2 dig.out.ns2 || ret=1
+$PERL ../digcomp.pl knowngood.after2 dig.out.ns3 || ret=1
+if [ $ret != 0 ] ; then echo "I:failed"; status=`expr $status + $ret`; fi
 
 echo "I:checking update forwarding to dead master"
 count=0
